# fast-api-starter-template

./: .env.example  .flake8  .gitignore  .pylintrc  HELP.md  README.md  pyproject.toml  test_main.http
.github/workflows/: github-ci.yml  pylint.yml
alembic/: env.py
alembic/versions/: 0499a41820ca_create_user_table.py  1d1db90dddb7_init_models.py  7e78d3c4b337_init_models.py
app/: depends.py  enums.py  handlers.py  main.py  models.py  schemas.py
app/api/: main.py  responses.py
app/api/routes/: auth.py  health.py
app/core/: app_config.py  database_config.py
app/models/: __init__.py  user.py
app/schemas/: auth_schema.py  page_response_schema.py  user_schema.py
app/services/: auth_service.py  user_service.py
app/utils/: encrypt_password_utils.py  exceptions_utils.py  token_utils.py
tests/: test_main.http
