[tool.poetry]
name = "fast-api-starter-template"
version = "0.1.0"
description = "Project FastAPI template with some configurations already made and authentication implemented, to be used as a basis for other projects"
authors = ["Juliana Marques <julianabmarques@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
alembic = "^1.16.1"
psycopg = "^3.2.9"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.9.1"
passlib = "^1.7.4"
email-validator = "^2.2.0"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
pandas = "^2.3.0"
poetry-core = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
